--- a/week-1/Conditionals_Loops_Functions.ipynb
+++ b/week-1/Conditionals_Loops_Functions.ipynb
@@ -388,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -397,7 +397,7 @@
        "[0, 1, 2, 3, 4]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1016,7 +1016,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1097,19 +1097,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "unexpected EOF while parsing (<ipython-input-6-d76df324052b>, line 10)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-6-d76df324052b>\"\u001b[0;36m, line \u001b[0;32m10\u001b[0m\n\u001b[0;31m    }\u001b[0m\n\u001b[0m     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unexpected EOF while parsing\n"
+     ]
+    }
+   ],
    "source": [
     "# write out a short example \n",
-    "studnet_dict= {'SeanAbu':{\n",
+    "student_dict= {'SeanAbu':{\n",
     "    'dob': '02/06/1985',\n",
     "    'nicknames': [],\n",
     "    'interests':[]},\n",
     "    {'Vishal':\n",
     "    { 'dob': '02/06/1985',\n",
     "    'nicknames': [],\n",
-    "    'interests':[]},}}\n",
+    "    'interests':[]},\n",
     "              }"
    ]
   },
@@ -1124,40 +1133,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['Abdul Tawab Safi', '08/04/1997', ['Tawaba', 'Kochi'], ['BJJ', 'Cricket', 'Gaming', 'MMA']]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "student = students[0]\n",
-    "print(student)\n"
+    "student = students[0] \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Abdul Tawab Safi'"
+       "['Abdul Tawab Safi',\n",
+       " '08/04/1997',\n",
+       " ['Tawaba', 'Kochi'],\n",
+       " ['BJJ', 'Cricket', 'Gaming', 'MMA']]"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "student[0]"
+    "student"
    ]
   },
   {
@@ -1174,13 +1177,11 @@
     }
    ],
    "source": [
-    "#create a container to hold the individucal student\n",
-    "student_dict = {student[0]:{\n",
-    "    'dob': student[1],\n",
-    "    'nicknames': student[2],\n",
-    "    'interests': student[3]\n",
+    "#create a container to hold the individual student\n",
+    "individual_student = {student[0]:{\n",
+    "    student\n",
     "}}\n",
-    "print(student_dict)"
+    "    "
    ]
   },
   {
@@ -1206,9 +1207,7 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "student[3]"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1228,17 +1227,7 @@
     }
    ],
    "source": [
-    "# first create a container to hold all of the student_dict\n",
-    "students_dict={}\n",
-    "for student in students:\n",
-    "\n",
-    "    student_dict = {student[0]:{\n",
-    "        'dob': student[1],\n",
-    "        'nicknames': student[2],\n",
-    "        'interests': student[3]\n",
-    "    }}\n",
-    "    students_dict.update(student_dict)\n",
-    "print(students_dict)"
+    "# first create a container to hold all of the student_dict\n"
    ]
   },
   {
@@ -1296,18 +1285,7 @@
    "outputs": [],
    "source": [
     "# write function here\n",
-    "\n",
-    "def student_loop(students):\n",
-    "    students_dict={}\n",
-    "    for student in students:\n",
-    "\n",
-    "        student_dict = {student[0]:{\n",
-    "            'dob': student[1],\n",
-    "            'nicknames': student[2],\n",
-    "            'interests': student[3]\n",
-    "        }}\n",
-    "        students_dict.update(student_dict)\n",
-    "    return students_dict"
+    "\n"
    ]
   },
   {
