--- a/week-1/OOP/Intro_OOP.ipynb
+++ b/week-1/OOP/Intro_OOP.ipynb
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 1,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 72,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -391,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -411,7 +411,7 @@
        "['John', 'Ariel', 'Jace', 'Romea', 'Irina']"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -445,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 76,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -552,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 71,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -560,14 +560,15 @@
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "['John', 'Ariel', 'Jace', 'Romea', 'Irina', 'TCF', 'Amalia', 'Amalia']"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'student_list' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-71-d55b2451efa1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     15\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mzip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ms_list\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mr_list\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 17\u001b[0;31m \u001b[0mdsc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcohort\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstudent_list\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'DS'\u001b[0m \u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     18\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m \u001b[0mdsc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstudents\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'student_list' is not defined"
+     ]
     }
    ],
    "source": [
@@ -676,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 98,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -684,8 +685,76 @@
    },
    "outputs": [],
    "source": [
-    "class calculator:\n",
-    "    pass"
+    "\n",
+    "\n",
+    "def calc_median(data): \n",
+    "    lenght_data = int(len(data)) #save the lenght \n",
+    "    middle_1 = int(lenght_data/2 - 1)\n",
+    "    middle_2 = int(lenght_data/2)\n",
+    "    \n",
+    "    if lenght_data % 2 == 0: # check if the lenght is odd or even\n",
+    "        median = (data[middle_1] + data[middle_2])/2\n",
+    "    else:\n",
+    "        median = data[middle_2]\n",
+    "    return median\n",
+    "\n",
+    "def calc_var(data):\n",
+    "    mean = calc_mean(data)\n",
+    "    return sum((x-mean)**2 for x in data)/(len(data)-1)\n",
+    "\n",
+    "import math\n",
+    "def calc_std(data):\n",
+    "    return math.sqrt(calc_var(data))\n",
+    "\n",
+    "class Calculator:\n",
+    "    def __init__(self, data):\n",
+    "        self.data = data\n",
+    "        self.lenght = len(self.data)\n",
+    "        self.mean = self.calc_mean()\n",
+    "        self.median = calc_median(self.data)\n",
+    "        self.variance = calc_var(self.data)\n",
+    "        self.standev = calc_std(self.data)\n",
+    "        \n",
+    "    def calc_mean(self):    \n",
+    "        mean = sum(self.data)/len(self.data)\n",
+    "        return mean\n",
+    "        \n",
+    "    def add_data(self, new_data):\n",
+    "        self.data.append(new_data)\n",
+    "        \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.6666666666666665"
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_data = [2,4,5]\n",
+    "my_calculator = Calculator(my_data)\n",
+    "\n",
+    "my_calculator.data\n",
+    "my_calculator.add_data(9)\n",
+    "\n",
+    "\n",
+    "\n",
+    "my_calculator.add_data(6)\n",
+    "\n",
+    "my_calculator.data\n",
+    "my_calculator.mean\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -808,18 +877,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 8,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'pandas'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-8-2cf0dedf6531>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mpandas\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mmeasurements\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_csv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"weight-height.csv\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mmeasurements\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtail\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m14\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m# measurements.columns\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'pandas'"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "measurements = pd.read_csv(\"weight-height.csv\")\n",
     "measurements.tail(14)\n",
-    "measurements.columns"
+    "# measurements.columns"
    ]
   },
   {
