--- a/week-2/Webscraping-and-APIs/webscraping/Webscraping.ipynb
+++ b/week-2/Webscraping-and-APIs/webscraping/Webscraping.ipynb
@@ -263,9 +263,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Response [200]>"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import requests\n",
     "page = requests.get(\"http://dataquestio.github.io/web-scraping-pages/simple.html\")\n",
@@ -281,9 +292,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "200"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "page.status_code\n"
    ]
@@ -297,9 +319,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "b'<!DOCTYPE html>\\n<html>\\n    <head>\\n        <title>A simple example page</title>\\n    </head>\\n    <body>\\n        <p>Here is some simple content for this page.</p>\\n    </body>\\n</html>'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "page.content"
    ]
@@ -315,9 +348,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<!DOCTYPE html>\n",
+       "\n",
+       "<html>\n",
+       "<head>\n",
+       "<title>A simple example page</title>\n",
+       "</head>\n",
+       "<body>\n",
+       "<p>Here is some simple content for this page.</p>\n",
+       "</body>\n",
+       "</html>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from bs4 import BeautifulSoup\n",
     "soup = BeautifulSoup(page.content, 'html.parser')\n",
@@ -326,9 +379,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<!DOCTYPE html>\n",
+      "<html>\n",
+      " <head>\n",
+      "  <title>\n",
+      "   A simple example page\n",
+      "  </title>\n",
+      " </head>\n",
+      " <body>\n",
+      "  <p>\n",
+      "   Here is some simple content for this page.\n",
+      "  </p>\n",
+      " </body>\n",
+      "</html>\n"
+     ]
+    }
+   ],
    "source": [
     "print(soup.prettify())\n"
    ]
@@ -698,6 +771,180 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 1\n",
+    "page = requests.get(\"http://forecast.weather.gov/MapClick.php?lat=37.7772&lon=-122.4168\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "#2\n",
+    "soup = BeautifulSoup(page.content, 'html.parser')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<div class=\"panel panel-default\" id=\"seven-day-forecast\">\n",
+       "<div class=\"panel-heading\">\n",
+       "<b>Extended Forecast for</b>\n",
+       "<h2 class=\"panel-title\">\n",
+       "\t    \t    San Francisco CA\t</h2>\n",
+       "</div>\n",
+       "<div class=\"panel-body\" id=\"seven-day-forecast-body\">\n",
+       "<div id=\"seven-day-forecast-container\"><ul class=\"list-unstyled\" id=\"seven-day-forecast-list\"><li class=\"forecast-tombstone\">\n",
+       "<div class=\"tombstone-container\">\n",
+       "<p class=\"period-name\">Today<br/><br/></p>\n",
+       "<p><img alt=\"Today: Sunny, with a high near 72. Light west southwest wind becoming west 6 to 11 mph in the afternoon. \" class=\"forecast-icon\" src=\"newimages/medium/few.png\" title=\"Today: Sunny, with a high near 72. Light west southwest wind becoming west 6 to 11 mph in the afternoon. \"/></p><p class=\"short-desc\">Sunny</p><p class=\"temp temp-high\">High: 72 °F</p></div></li><li class=\"forecast-tombstone\">\n",
+       "<div class=\"tombstone-container\">\n",
+       "<p class=\"period-name\">Tonight<br/><br/></p>\n",
+       "<p><img alt=\"Tonight: Partly cloudy, with a low around 56. West southwest wind 7 to 13 mph. \" class=\"forecast-icon\" src=\"newimages/medium/nsct.png\" title=\"Tonight: Partly cloudy, with a low around 56. West southwest wind 7 to 13 mph. \"/></p><p class=\"short-desc\">Partly Cloudy</p><p class=\"temp temp-low\">Low: 56 °F</p></div></li><li class=\"forecast-tombstone\">\n",
+       "<div class=\"tombstone-container\">\n",
+       "<p class=\"period-name\">Thursday<br/><br/></p>\n",
+       "<p><img alt=\"Thursday: Mostly sunny, with a high near 70. West southwest wind 7 to 13 mph. \" class=\"forecast-icon\" src=\"newimages/medium/sct.png\" title=\"Thursday: Mostly sunny, with a high near 70. West southwest wind 7 to 13 mph. \"/></p><p class=\"short-desc\">Mostly Sunny</p><p class=\"temp temp-high\">High: 70 °F</p></div></li><li class=\"forecast-tombstone\">\n",
+       "<div class=\"tombstone-container\">\n",
+       "<p class=\"period-name\">Thursday<br/>Night</p>\n",
+       "<p><img alt=\"Thursday Night: Mostly cloudy, with a low around 57. West southwest wind 8 to 11 mph. \" class=\"forecast-icon\" src=\"newimages/medium/nbkn.png\" title=\"Thursday Night: Mostly cloudy, with a low around 57. West southwest wind 8 to 11 mph. \"/></p><p class=\"short-desc\">Mostly Cloudy</p><p class=\"temp temp-low\">Low: 57 °F</p></div></li><li class=\"forecast-tombstone\">\n",
+       "<div class=\"tombstone-container\">\n",
+       "<p class=\"period-name\">Friday<br/><br/></p>\n",
+       "<p><img alt=\"Friday: Partly sunny, with a high near 69. West southwest wind 7 to 10 mph. \" class=\"forecast-icon\" src=\"newimages/medium/bkn.png\" title=\"Friday: Partly sunny, with a high near 69. West southwest wind 7 to 10 mph. \"/></p><p class=\"short-desc\">Partly Sunny</p><p class=\"temp temp-high\">High: 69 °F</p></div></li><li class=\"forecast-tombstone\">\n",
+       "<div class=\"tombstone-container\">\n",
+       "<p class=\"period-name\">Friday<br/>Night</p>\n",
+       "<p><img alt=\"Friday Night: Mostly cloudy, with a low around 57.\" class=\"forecast-icon\" src=\"newimages/medium/nbkn.png\" title=\"Friday Night: Mostly cloudy, with a low around 57.\"/></p><p class=\"short-desc\">Mostly Cloudy</p><p class=\"temp temp-low\">Low: 57 °F</p></div></li><li class=\"forecast-tombstone\">\n",
+       "<div class=\"tombstone-container\">\n",
+       "<p class=\"period-name\">Saturday<br/><br/></p>\n",
+       "<p><img alt=\"Saturday: Mostly sunny, with a high near 75.\" class=\"forecast-icon\" src=\"newimages/medium/sct.png\" title=\"Saturday: Mostly sunny, with a high near 75.\"/></p><p class=\"short-desc\">Mostly Sunny</p><p class=\"temp temp-high\">High: 75 °F</p></div></li><li class=\"forecast-tombstone\">\n",
+       "<div class=\"tombstone-container\">\n",
+       "<p class=\"period-name\">Saturday<br/>Night</p>\n",
+       "<p><img alt=\"Saturday Night: Mostly clear, with a low around 59.\" class=\"forecast-icon\" src=\"newimages/medium/nfew.png\" title=\"Saturday Night: Mostly clear, with a low around 59.\"/></p><p class=\"short-desc\">Mostly Clear</p><p class=\"temp temp-low\">Low: 59 °F</p></div></li><li class=\"forecast-tombstone\">\n",
+       "<div class=\"tombstone-container\">\n",
+       "<p class=\"period-name\">Sunday<br/><br/></p>\n",
+       "<p><img alt=\"Sunday: Sunny, with a high near 74.\" class=\"forecast-icon\" src=\"newimages/medium/few.png\" title=\"Sunday: Sunny, with a high near 74.\"/></p><p class=\"short-desc\">Sunny</p><p class=\"temp temp-high\">High: 74 °F</p></div></li></ul></div>\n",
+       "<script type=\"text/javascript\">\n",
+       "// equalize forecast heights\n",
+       "$(function () {\n",
+       "\tvar maxh = 0;\n",
+       "\t$(\".forecast-tombstone .short-desc\").each(function () {\n",
+       "\t\tvar h = $(this).height();\n",
+       "\t\tif (h > maxh) { maxh = h; }\n",
+       "\t});\n",
+       "\t$(\".forecast-tombstone .short-desc\").height(maxh);\n",
+       "});\n",
+       "</script> </div>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "#3\n",
+    "seven_day = soup.find(id=\"seven-day-forecast\")\n",
+    "seven_day"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<div class=\"tombstone-container\">\n",
+       " <p class=\"period-name\">Today<br/><br/></p>\n",
+       " <p><img alt=\"Today: Sunny, with a high near 72. Light west southwest wind becoming west 6 to 11 mph in the afternoon. \" class=\"forecast-icon\" src=\"newimages/medium/few.png\" title=\"Today: Sunny, with a high near 72. Light west southwest wind becoming west 6 to 11 mph in the afternoon. \"/></p><p class=\"short-desc\">Sunny</p><p class=\"temp temp-high\">High: 72 °F</p></div>,\n",
+       " <div class=\"tombstone-container\">\n",
+       " <p class=\"period-name\">Tonight<br/><br/></p>\n",
+       " <p><img alt=\"Tonight: Partly cloudy, with a low around 56. West southwest wind 7 to 13 mph. \" class=\"forecast-icon\" src=\"newimages/medium/nsct.png\" title=\"Tonight: Partly cloudy, with a low around 56. West southwest wind 7 to 13 mph. \"/></p><p class=\"short-desc\">Partly Cloudy</p><p class=\"temp temp-low\">Low: 56 °F</p></div>,\n",
+       " <div class=\"tombstone-container\">\n",
+       " <p class=\"period-name\">Thursday<br/><br/></p>\n",
+       " <p><img alt=\"Thursday: Mostly sunny, with a high near 70. West southwest wind 7 to 13 mph. \" class=\"forecast-icon\" src=\"newimages/medium/sct.png\" title=\"Thursday: Mostly sunny, with a high near 70. West southwest wind 7 to 13 mph. \"/></p><p class=\"short-desc\">Mostly Sunny</p><p class=\"temp temp-high\">High: 70 °F</p></div>,\n",
+       " <div class=\"tombstone-container\">\n",
+       " <p class=\"period-name\">Thursday<br/>Night</p>\n",
+       " <p><img alt=\"Thursday Night: Mostly cloudy, with a low around 57. West southwest wind 8 to 11 mph. \" class=\"forecast-icon\" src=\"newimages/medium/nbkn.png\" title=\"Thursday Night: Mostly cloudy, with a low around 57. West southwest wind 8 to 11 mph. \"/></p><p class=\"short-desc\">Mostly Cloudy</p><p class=\"temp temp-low\">Low: 57 °F</p></div>,\n",
+       " <div class=\"tombstone-container\">\n",
+       " <p class=\"period-name\">Friday<br/><br/></p>\n",
+       " <p><img alt=\"Friday: Partly sunny, with a high near 69. West southwest wind 7 to 10 mph. \" class=\"forecast-icon\" src=\"newimages/medium/bkn.png\" title=\"Friday: Partly sunny, with a high near 69. West southwest wind 7 to 10 mph. \"/></p><p class=\"short-desc\">Partly Sunny</p><p class=\"temp temp-high\">High: 69 °F</p></div>,\n",
+       " <div class=\"tombstone-container\">\n",
+       " <p class=\"period-name\">Friday<br/>Night</p>\n",
+       " <p><img alt=\"Friday Night: Mostly cloudy, with a low around 57.\" class=\"forecast-icon\" src=\"newimages/medium/nbkn.png\" title=\"Friday Night: Mostly cloudy, with a low around 57.\"/></p><p class=\"short-desc\">Mostly Cloudy</p><p class=\"temp temp-low\">Low: 57 °F</p></div>,\n",
+       " <div class=\"tombstone-container\">\n",
+       " <p class=\"period-name\">Saturday<br/><br/></p>\n",
+       " <p><img alt=\"Saturday: Mostly sunny, with a high near 75.\" class=\"forecast-icon\" src=\"newimages/medium/sct.png\" title=\"Saturday: Mostly sunny, with a high near 75.\"/></p><p class=\"short-desc\">Mostly Sunny</p><p class=\"temp temp-high\">High: 75 °F</p></div>,\n",
+       " <div class=\"tombstone-container\">\n",
+       " <p class=\"period-name\">Saturday<br/>Night</p>\n",
+       " <p><img alt=\"Saturday Night: Mostly clear, with a low around 59.\" class=\"forecast-icon\" src=\"newimages/medium/nfew.png\" title=\"Saturday Night: Mostly clear, with a low around 59.\"/></p><p class=\"short-desc\">Mostly Clear</p><p class=\"temp temp-low\">Low: 59 °F</p></div>,\n",
+       " <div class=\"tombstone-container\">\n",
+       " <p class=\"period-name\">Sunday<br/><br/></p>\n",
+       " <p><img alt=\"Sunday: Sunny, with a high near 74.\" class=\"forecast-icon\" src=\"newimages/medium/few.png\" title=\"Sunday: Sunny, with a high near 74.\"/></p><p class=\"short-desc\">Sunny</p><p class=\"temp temp-high\">High: 74 °F</p></div>]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#4\n",
+    "forecast_items = seven_day.find_all(class_=\"tombstone-container\")\n",
+    "forecast_items"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<div class=\"tombstone-container\">\n",
+      " <p class=\"period-name\">\n",
+      "  Today\n",
+      "  <br/>\n",
+      "  <br/>\n",
+      " </p>\n",
+      " <p>\n",
+      "  <img alt=\"Today: Sunny, with a high near 72. Light west southwest wind becoming west 6 to 11 mph in the afternoon. \" class=\"forecast-icon\" src=\"newimages/medium/few.png\" title=\"Today: Sunny, with a high near 72. Light west southwest wind becoming west 6 to 11 mph in the afternoon. \"/>\n",
+      " </p>\n",
+      " <p class=\"short-desc\">\n",
+      "  Sunny\n",
+      " </p>\n",
+      " <p class=\"temp temp-high\">\n",
+      "  High: 72 °F\n",
+      " </p>\n",
+      "</div>\n"
+     ]
+    }
+   ],
+   "source": [
+    "#5\n",
+    "tonight = forecast_items[0]\n",
+    "print(tonight.prettify())"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -743,9 +990,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Today',\n",
+       " 'Tonight',\n",
+       " 'Thursday',\n",
+       " 'ThursdayNight',\n",
+       " 'Friday',\n",
+       " 'FridayNight',\n",
+       " 'Saturday',\n",
+       " 'SaturdayNight',\n",
+       " 'Sunday']"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "period_tags = seven_day.select(\".tombstone-container .period-name\")\n",
     "periods = [pt.get_text() for pt in period_tags]\n",
@@ -761,13 +1027,48 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['High: 72 °F',\n",
+       " 'Low: 56 °F',\n",
+       " 'High: 70 °F',\n",
+       " 'Low: 57 °F',\n",
+       " 'High: 69 °F',\n",
+       " 'Low: 57 °F',\n",
+       " 'High: 75 °F',\n",
+       " 'Low: 59 °F',\n",
+       " 'High: 74 °F']"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#your code here\n",
+    "temp_tags = seven_day.select(\".tombstone-container .temp\")\n",
+    "temperatures = [tp.get_text() for tp in temp_tags]\n",
+    "temperatures\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "#your code here\n",
-    "\n"
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
