--- a/week-5/ANOVA/ANOVA_0715.ipynb
+++ b/week-5/ANOVA/ANOVA_0715.ipynb
@@ -149,7 +149,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -324,7 +326,33 @@
     "import matplotlib.pyplot as plt\n",
     "data = pd.read_csv('bikeshare_day.csv')\n",
     "data.head()\n",
+    "\n",
     "# cnt is the outcome we are trying to predict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(181, 184, 188, 178)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a=len(data.query('season==1'))\n",
+    "b=len(data.query('season==2'))\n",
+    "c=len(data.query('season==3'))\n",
+    "d=len(data.query('season==4'))\n",
+    "\n",
+    "a,b,c,d"
    ]
   },
   {
