--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -2,22 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "14.0625"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "36/24+81/24+9/12+36/16+81/16+9/8"
+    "import requests"
    ]
   },
   {
