--- a/week-2/Webscraping-and-APIs/webscraping/advanced_webscraping.ipynb
+++ b/week-2/Webscraping-and-APIs/webscraping/advanced_webscraping.ipynb
@@ -118,9 +118,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "ename": "InvalidSchema",
@@ -638,9 +636,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -3632,9 +3628,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -3755,7 +3749,9 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -8729,9 +8725,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -9111,7 +9105,7 @@
     "#find the element where you input your email\n",
     "email = driver.find_elements_by_css_selector('form input')[0]\n",
     "\n",
-    "#find the element where you input your password\n",
+    "#find the element whmaere you input your password\n",
     "password = driver.find_elements_by_css_selector('form input')[1]\n",
     "\n",
     "#send your keys to those elements\n",
